// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INJECT PRODUCTION should group breakpoints 1`] = `
"@media (max-width: 768px) {.AV_A {
  color: red;
}.AV_B {
  color: blue;
}}"
`;

exports[`INJECT PRODUCTION should group themes 1`] = `
".AV_C {
  color: var(--colors-GREEN);
}.AV_D {
  color: var(--colors-PURPLE);
}:root{--colors-GREEN:green;--colors-PURPLE:purple;}.themes-dark{--colors-GREEN:yellow;--colors-PURPLE:pink;}"
`;

exports[`INJECT PRODUCTION should group themes and breakpoints 1`] = `
"@media (max-width: 768px) {.AV_A {
  color: red;
}.AV_D {
  color: var(--colors-PURPLE);
}}:root{--colors-PURPLE:purple;}.themes-dark{--colors-PURPLE:pink;}"
`;

exports[`INJECT PRODUCTION should handle references classnames 1`] = `
".P_C:hover {
  border-top-color: var(--colors-GREEN);
}.Q_C:hover {
  border-right-color: var(--colors-GREEN);
}.R_C:hover {
  border-bottom-color: var(--colors-GREEN);
}.S_C:hover {
  border-left-color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}.themes-dark{--colors-GREEN:yellow;}"
`;

exports[`INJECT PRODUCTION should inject both pseudo selector and breakpoint 1`] = `
"@media (max-width: 768px) {.AV_A:hover {
  color: red;
}}"
`;

exports[`INJECT PRODUCTION should inject multiple 1`] = `
"@media (max-width: 768px) {.AV_A {
  color: red;
}.AV_B:hover {
  color: blue;
}}"
`;

exports[`INJECT PRODUCTION should inject simple 1`] = `
".AV_A {
  color: red;
}"
`;

exports[`INJECT PRODUCTION should inject themes 1`] = `
"@media (max-width: 768px) {.AV_C {
  color: var(--colors-GREEN);
}}:root{--colors-GREEN:green;}.themes-dark{--colors-GREEN:yellow;}"
`;

exports[`INJECT PRODUCTION should inject with breakpoint 1`] = `
"@media (max-width: 768px) {.AV_A {
  color: red;
}}"
`;

exports[`INJECT PRODUCTION should inject with multiple breakpoints 1`] = `
"@media (max-width: 640px) {.AV_A {
  color: red;
}}@media (max-width: 1280px) {.AV_A {
  color: red;
}}"
`;

exports[`INJECT PRODUCTION should inject with multiple pseudo selectors 1`] = `
".AV_A:first-child:hover {
  color: red;
}"
`;

exports[`INJECT PRODUCTION should inject with pseudo selector 1`] = `
".AV_A:hover {
  color: red;
}"
`;
